[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Objects/Spike/spike_box.png" type="Texture" id=1]
[ext_resource path="res://Audio/SoundEffects/Bonus/brick.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/SoundEffects/Bonus/upgrade.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Objects/logic/spikeblock.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Objects/Spike/spike_point.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 15.6576, 15.4837 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 14.9892, 9.03887 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 16.2131, 10.135 )

[node name="Spikeblock" type="KinematicBody2D" groups=[
"spike",
]]
z_index = -1
collision_layer = 31
collision_mask = 31
script = ExtResource( 4 )

[node name="Brick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Upgrade" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="spike_box" type="Sprite" parent="."]
position = Vector2( 0.336456, -0.471044 )
scale = Vector2( 1.01262, 1.00421 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.336456, -0.471044 )
scale = Vector2( 1.01262, 1.00421 )
texture = ExtResource( 1 )

[node name="point_collision2" type="CollisionShape2D" parent="."]
position = Vector2( 0.471035, -32.6368 )
scale = Vector2( 1.01262, 1.00421 )
shape = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.560501, -49.1851 )
scale = Vector2( 1.01262, 1.00421 )

[node name="point_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0627379, 14.296 )
shape = SubResource( 18 )

[node name="spike_point" type="Sprite" parent="."]
position = Vector2( 0.471035, -32.6368 )
scale = Vector2( 1.01262, 1.00421 )
texture = ExtResource( 5 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
